[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-llm-antispam-bot"
version = "0.1.0"
description = "Telegram LLM-assisted anti-spam moderation bot."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.7,<4",
    "openai>=1.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.5",
]

[project.scripts]
antispam-bot = "telegram_llm_antispam.app:main"
antispam-admin = "telegram_llm_antispam.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

